# server/src/api/questions/index.ts
@@ -1,0 +1,1 @@
+export { default as questionsRouter } from './questions.routes';
